--- a/Kindergarten/Kindergarten/View/index.html
+++ b/Kindergarten/Kindergarten/View/index.html
@@ -1,12 +1,13 @@
 <html>
     <title>hello</title>
     <head>
-        <link rel="stylesheet" type="text/css" href="index.css">
-        <script type="text/javascript" src="index.js"></script>
+        <link rel="stylesheet" type="text/css" href="css/index.css">
+        <script type="text/javascript" src="js/index.js"></script>
     </head>
     <body>
         <h1 id="p">hello world</h1>
-        <button onclick="hello()">hello</button>
+        <button width="100" height="40" onclick="CallEachModel.jsCallOC()">注销</button>
+        <button width="100" height="40" onclick="CallEachModel.jsCallOCForUpload()">上传数据</button>
     </body>
 </html>
 
